메인화면 수정본 ver1.0

--- a/templates/accounts/admin_login.html
+++ b/templates/accounts/admin_login.html
@@ -22,7 +22,7 @@
               <form method="post" class="form">
                 {% csrf_token %}
                   <h2 class="fw-bold mb-4 text-uppercase" style="font-size: 2rem; line-height: 1.6;">
-                  조기진통감지 및<br>스트레스 완화
+                  PRECARE
                 </h2>
                 <p class="text-white-50 mb-5">관리자 정보를 입력해주세요!</p>
                 {% bootstrap_form form %}
