--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,7 +14,7 @@
               <div class="card-body p-5 text-center">
                 <div class="mb-md-5 mt-md-4 pb-5">
                   <h2 class="fw-bold mb-4 text-uppercase" style="font-size: 2rem; line-height: 1.6;">
-                  조기진통감지 및<br>스트레스 완화
+                  PRECARE
                 </h2>
                   <p class="text-white-50 mb-5">로그인 방법을 선택해주세요</p>
 
