--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
                 <a href="{% url 'home' %}"
                    class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                     <img src="{% static 'IC_LOGO.png' %}" width="52" height="52" alt="중견연구 아이콘"/>
-                    조기진통 감지 및 스트레스 완화
+                    PRECARE
                 </a>
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                     <li>
