--- a/templates/main.html
+++ b/templates/main.html
@@ -35,12 +35,12 @@
             margin-top: 1rem;
         }
         .card-section {
-            background-color: #FAF7F3;
+            background-color: #FFFFFF;
             padding: 4rem 0;
         }
             .info-card {
                 border: none;
-                background-color: #E5F6F3;
+                background-color: 	#E1FAF6;
                 border-radius: 1rem;
                 box-shadow: 0 4px 10px rgba(0,0,0,0.05);
                 transition: transform 0.2s;
