--- a/templates/header.html
+++ b/templates/header.html
@@ -1,33 +1,79 @@
 {% load static %}
 
+<style>
+    header {
+        background-color: #4AB3C6;
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+
+    .nav-link {
+        color: #FFFDF8 !important;
+        font-weight: 500;
+        transition: color 0.2s;
+    }
+
+    .nav-link:hover {
+        color: #FFE3D6 !important;
+    }
+
+    .btn-login {
+        background-color: #FF9472;
+        border: none;
+        color: white;
+        border-radius: 1.5rem;
+        padding: 0.4rem 1rem;
+    }
+
+    .btn-login:hover {
+        background-color: #f26d4f;
+        color: white;
+    }
+
+    .btn-logout {
+        background-color: #FFFDF8;
+        color: #4AB3C6;
+        border: none;
+        border-radius: 1.5rem;
+        padding: 0.4rem 1rem;
+    }
+
+    .btn-logout:hover {
+        background-color: #FFE3D6;
+        color: #4AB3C6;
+    }
+
+    .nav svg {
+        margin-right: 5px;
+        vertical-align: middle;
+    }
+</style>
+
 <header>
-    <div class="px-3 py-2 text-bg-dark border-bottom">
+    <div class="px-3 py-2 border-bottom">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="{% url 'home' %}"
                    class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <img src="{% static 'IC_LOGO.png' %}" width="52" height="52" alt="중견연구 아이콘"/>
-                    PRECARE
+                    <img src="{% static 'IC_LOGO.png' %}" width="52" height="52" alt="중견연구 아이콘" />
+                    <span class="ms-2 fw-bold" style="font-size: 1.3rem;">PRECARE</span>
                 </a>
+
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                     <li>
-                        <a href="/" class="nav-link text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        <a href="/" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                  class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                                <path
-                                        d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
+                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
                             </svg>
                             홈
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'survey:survey-list' %}" class="nav-link text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        <a href="{% url 'survey:survey-list' %}" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                  class="bi bi-file-post" viewBox="0 0 16 16">
-                                <path
-                                        d="M4 3.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5z"/>
-                                <path
-                                        d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1"/>
+                                <path d="M4 3.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5z"/>
+                                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1"/>
                             </svg>
                             설문조사
                         </a>
@@ -35,46 +81,45 @@
                     {% if user.is_superuser %}
                     <li>
                         <a href="{% url 'accounts:fitbitUserManage' %}?page=1&order_by=fitbit__full_name&direction=asc"
-                           class="nav-link text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                           class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                  class="bi bi-people-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                                <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
                             </svg>
                             fitbit 참여자 관리
                         </a>
                     </li>
                     <li>
                         <a href="{% url 'accounts:userManage' %}?page=1&order_by=huami__name&direction=asc"
-                           class="nav-link text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                           class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                  class="bi bi-people-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                                <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
                             </svg>
                             huami 참여자 관리
                         </a>
                     </li>
                     {% endif %}
                     {% if user.is_authenticated %}
-                        <li>
-                            <a href="{% url 'accounts:user_profile' %}" class="nav-link text-white">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                                     class="bi bi-person-fill" viewBox="0 0 16 16">
-                                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
-                                </svg>
-                                {{ user.fitbit.full_name|default:user.username }}
-                            </a>
-                        </li>
+                    <li>
+                        <a href="{% url 'accounts:user_profile' %}" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                 class="bi bi-person-fill" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                            </svg>
+                            {{ user.fitbit.full_name|default:user.username }}
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
+
                 {% if user.is_authenticated %}
-                    <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;">
-                        {% csrf_token %}
-                        <button class="btn btn-secondary" type="submit">로그아웃</button>
-                    </form>
+                <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;">
+                    {% csrf_token %}
+                    <button class="btn btn-logout" type="submit">로그아웃</button>
+                </form>
                 {% else %}
-                    <a class="btn btn-primary" href="{% url 'accounts:login' %}" role="button">로그인</a>
+                <a class="btn btn-login" href="{% url 'accounts:login' %}" role="button">로그인</a>
                 {% endif %}
             </div>
         </div>
