푸터 그라데이션 조정

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
-<!-- 푸터 시작 전 그라데이션 경계선 -->
-<div style="height: 2px; background: linear-gradient(to right, transparent, #000000, transparent); margin-top: 4rem;"></div>
+    <div style="height: 2px; background: linear-gradient(to right, transparent, #000000, transparent);color: transparent;">.</div>
+
 
 <footer style="background-color: #FCE0D2; width: 100%; padding: 1rem 0;">
   <div style="max-width: 1140px; margin: 0 auto; text-align: center;">
