로그인 버튼 수정

--- a/templates/header.html
+++ b/templates/header.html
@@ -17,9 +17,9 @@
     }
 
     .btn-login {
-        background-color: #FF9472;
+        background-color: #FFFDF8;
+        color: #4AB3C6;
         border: none;
-        color: white;
         border-radius: 1.5rem;
         padding: 0.4rem 1rem;
     }
@@ -38,10 +38,9 @@
     }
 
     .btn-logout:hover {
-        background-color: #FFE3D6;
-        color: #4AB3C6;
+        background-color: #f26d4f;
+        color: white;
     }
-
     .nav svg {
         margin-right: 5px;
         vertical-align: middle;
