메인화면 색 수정

--- a/templates/main.html
+++ b/templates/main.html
@@ -35,7 +35,7 @@
             margin-top: 1rem;
         }
         .card-section {
-            background-color: #FFFFFF;
+            background-color: #FFFAF8;
             padding: 4rem 0;
         }
             .info-card {
