--- a/templates/accounts/admin_login.html
+++ b/templates/accounts/admin_login.html
@@ -90,7 +90,7 @@ background: linear-gradient(135deg,
       <div class="col-12 col-md-8 col-lg-6 col-xl-4">
         <div class="card login-card">
 
-            <div class="login-logo">PRECARE</div>
+            <div class="login-logo">조기진통 감지 및 스트레스 완화</div>
 
 
           <!-- 로그인 폼 -->
