--- a/templates/header.html
+++ b/templates/header.html
@@ -49,7 +49,7 @@
                 <a href="{% url 'home' %}"
                    class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                     <img src="{% static 'IC_LOGO.png' %}" width="52" height="52" alt="중견연구 아이콘" />
-                <span class="ms-2 precare-logo" style="font-size: 1.3rem;">PRECARE</span>
+                <span class="ms-2 precare-logo" style="font-size: 1.3rem;">조기진통 감지 및 스트레스 완화</span>
 
                 </a>
 
