--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PRECARE</title>
+    <title>조기진통 감지 및 스트레스 완화</title>
 
     {% bootstrap_css %}
     {% bootstrap_javascript %}
