설문조사 순서 변경

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PRECARE</title>
+    <title>조기진통 감지 및 스트레스 완화</title>
 
     {% bootstrap_css %}
     {% bootstrap_javascript %}
@@ -56,7 +56,7 @@
             color: #ff9472;
         }
       .precare-btn {
-        background-color: 		#FBB77D   ; 
+        background-color: 		#FBB77D   ;
         color: white;
         border: none;
         border-radius: 0.75rem;
@@ -65,7 +65,7 @@
       }
 
       .precare-btn:hover {
-        background-color: #EBA064; 
+        background-color: #EBA064;
         color : white !important;
         transform: translateY(-2px);
       }
@@ -87,7 +87,7 @@
 <section class="card-section">
   <div class="container">
     <div class="row text-center mb-5">
-      <h2 class="fw-bold">PRECARE 서비스는 이렇게 도와드려요</h2>
+      <h2 class="fw-bold">우리 서비스는 이렇게 도와드려요</h2>
     </div>
     <div class="row g-4">
       <!-- 카드 1 -->
